# task_tracker

./: .coveragerc  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  tasks_fixture.json  users_fixture.json
config/: settings.py  urls.py
htmlcov/: class_index.html  function_index.html  index.html  manage_py.html  status.json  z_1df033120bbcc412___init___py.html  z_1df033120bbcc412_create_moderator_py.html  z_1df033120bbcc412_csu_py.html  z_1ea838694151cac8___init___py.html  z_1ea838694151cac8_asgi_py.html  z_1ea838694151cac8_settings_py.html  z_1ea838694151cac8_urls_py.html  z_1ea838694151cac8_wsgi_py.html  z_5caf520a5ad64cff___init___py.html  z_5caf520a5ad64cff_admin_py.html  z_5caf520a5ad64cff_apps_py.html  z_5caf520a5ad64cff_filters_py.html  z_5caf520a5ad64cff_models_py.html  z_5caf520a5ad64cff_paginators_py.html  z_5caf520a5ad64cff_serializers_py.html  z_5caf520a5ad64cff_tests_py.html  z_5caf520a5ad64cff_urls_py.html  z_5caf520a5ad64cff_validators_py.html  z_5caf520a5ad64cff_views_py.html  z_61b35995013bde1d_0001_initial_py.html  z_61b35995013bde1d_0002_initial_py.html  z_61b35995013bde1d_0003_alter_task_status_py.html  z_61b35995013bde1d___init___py.html  z_8b562f3fe71efc7d___init___py.html  z_f6c68bdc9becfc1e___init___py.html  z_f6c68bdc9becfc1e_admin_py.html  z_f6c68bdc9becfc1e_apps_py.html  z_f6c68bdc9becfc1e_models_py.html  z_f6c68bdc9becfc1e_permissions_py.html  z_f6c68bdc9becfc1e_serializers_py.html  z_f6c68bdc9becfc1e_services_py.html  z_f6c68bdc9becfc1e_tests_py.html  z_f6c68bdc9becfc1e_urls_py.html  z_f6c68bdc9becfc1e_views_py.html  z_fff39e3ca0aaeed4_0001_initial_py.html  (+2 more)
tasks/: filters.py  models.py  (+5 more)
(+16 files in other folders)
