[tool.poetry]
name = "task-tracker"
version = "0.1.0"
description = ""
authors = ["Petr Maev <petr.maev94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
black = "^25.1.0"
isort = "^6.0.1"


[tool.poetry.group.dev.dependencies]
django = "^5.2.5"
djangorestframework = "^3.16.1"
ipython = "^9.4.0"
python-dotenv = "^1.1.1"
djangorestframework-simplejwt = "^5.5.1"
coverage = "^7.10.4"
drf-yasg = "^1.21.10"
django-filter = "^25.1"
psycopg2 = "^2.9.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py           # Также отдельно исключить файл с именем foo.py
                     # в корне проекта
)
'''

[tool.isort]
# Максимальная длина строки
line_length = 119

[tool.coverage.run]
source = ["tasks", "users"]
omit = [
    "tests/*",
    "migrations/*",
    "venv/*",
    ".venv/*",
    "env/*",
    "static/*",
    "media/*",
    "templates/*",
    "docs/*",
    "build/*",
    "dist/*",
    "node_modules/*",
    "*.pyc",
    "__pycache__/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __str__",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if settings.DEBUG:"
]
